--- a/ClinicManagementSystem Solution/ClinicManagementSystem/Views/Home/Index.cshtml
+++ b/ClinicManagementSystem Solution/ClinicManagementSystem/Views/Home/Index.cshtml
@@ -4,6 +4,30 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>TO CLINIC MANAGEMENT SYSTEM</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card">
+                    <img src="./img/national-cancer-institute-yg1Zayn0Few-unsplash (1).jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Patient</h5>
+                        <p class="card-text"></p>
+                        <a asp-controller="Patient" asp-action="Index" class="btn btn-primary">Enter</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card">
+                    <img src="./img/stanley-dai-73OZYNjVoNI-unsplash.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Admin</h5>
+                        <p class="card-text"></p>
+                        <a asp-controller="Admin" asp-action="Index" class="btn btn-primary">Enter</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
