--- a/ClinicManagementSystem Solution/ClinicManagementSystem/Views/_ViewImports.cshtml
+++ b/ClinicManagementSystem Solution/ClinicManagementSystem/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ClinicManagementSystem
 @using ClinicManagementSystem.Models
+@using ClinicManagementSystem.DAL.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
