--- a/ClinicManagementSystem Solution/ClinicManagementSystem/Views/Patient/Index.cshtml
+++ b/ClinicManagementSystem Solution/ClinicManagementSystem/Views/Patient/Index.cshtml
@@ -27,7 +27,7 @@
                 <th class="col-4">@item.PatientID</th>
                 <td class="col-4">@item.Name</td>
                 <td class="col-2"><a  class="btn btn-outline-dark">View Appointments</a></td>
-                <td class="col-2"><a  class="btn btn-outline-dark">Add Appointment</a></td>
+                        <td class="col-2"><a asp-action="CreateAppoin" class="btn btn-outline-dark">Add Appointment</a></td>
             </tr>}
         </tbody>
     </table>
