--- a/ClinicManagementSystem Solution/ClinicManagementSystem/Views/Patient/Index.cshtml
+++ b/ClinicManagementSystem Solution/ClinicManagementSystem/Views/Patient/Index.cshtml
@@ -10,8 +10,8 @@
     <a asp-action="Create" class="btn btn-primary float-end"> Add New Patient</a>
     @if (Model.Count() > 0)
     {
-        
-            <table class="table table-hover">
+
+        <table class="table table-hover table-bordered" style="border-radius:10px;overflow:hidden">
         <thead>
             <tr>
                 <th scope="col">ID </th>
@@ -23,12 +23,13 @@
         <tbody>
                 @foreach (var item in Model)
                 {
-            <tr class="table-info">
-                <th class="col-4">@item.PatientID</th>
-                <td class="col-4">@item.Name</td>
-                <td class="col-2"><a  class="btn btn-outline-dark">View Appointments</a></td>
-                        <td class="col-2"><a asp-action="CreateAppoin" class="btn btn-outline-dark">Add Appointment</a></td>
-            </tr>}
+                    <tr class="table-info">
+                        <th class="col-4">@item.PatientID</th>
+                        <td class="col-4">@item.Name</td>
+                        <td class="col-2"><a asp-action="ViewAppointments" asp-route-id="@item.PatientID" class="btn btn-outline-dark">View Appointments</a></td>
+                        <td class="col-2"><a asp-action="CreateAppoin" asp-route-id="@item.PatientID" class="btn btn-outline-dark">Add Appointment</a></td>
+                    </tr>
+                }
         </tbody>
     </table>
         
